Add search highlighting and scroll

--- a/enhanced_search/public/manifest.json
+++ b/enhanced_search/public/manifest.json
@@ -14,5 +14,11 @@
     "default_popup": "index.html",
     "default_title": "Enhanced Search"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["mark.js", "Highlight.js"]
+    }
+  ],
   "permissions": ["activeTab", "scripting"]
 }
