--- a/enhanced_search/package.json
+++ b/enhanced_search/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "lodash": "^4.17.21",
+    "mark.js": "^8.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "run-script-os",
+    "build": "run-script-os; cp node_modules/mark.js/dist/mark.js build/; cp src/content_scripts/* build/;",
     "build:windows": "set INLINE_RUNTIME_CHUNK=false && react-scripts build & set INLINE_RUNTIME_CHUNK=",
     "build:macos": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build:default": "INLINE_RUNTIME_CHUNK=false react-scripts build",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.251"
+    "@types/chrome": "^0.0.251",
+    "@types/mark.js": "^8.11.12"
   }
 }
