--- a/enhanced_search/public/manifest.json
+++ b/enhanced_search/public/manifest.json
@@ -20,5 +20,13 @@
       "js": ["mark.js", "Highlight.js"]
     }
   ],
-  "permissions": ["activeTab", "scripting"]
+  "permissions": ["activeTab", "scripting"],
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
+      }
+    }
+  }
 }
