--- a/enhanced_search/package.json
+++ b/enhanced_search/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "run-script-os",
-    "build:windows": "set INLINE_RUNTIME_CHUNK=false && react-scripts build & set INLINE_RUNTIME_CHUNK= & cp node_modules/mark.js/dist/mark.js build/ & cp src/content_scripts/* build/*",
+    "build:windows": "set INLINE_RUNTIME_CHUNK=false && react-scripts build & set INLINE_RUNTIME_CHUNK= & copy node_modules\\mark.js\\dist\\mark.js build & xcopy src\\content_scripts build /i /y",
     "build:macos": "INLINE_RUNTIME_CHUNK=false react-scripts build; cp node_modules/mark.js/dist/mark.js build/; cp src/content_scripts/* build/;",
     "build:default": "INLINE_RUNTIME_CHUNK=false react-scripts build; cp node_modules/mark.js/dist/mark.js build/; cp src/content_scripts/* build/;",
     "test": "react-scripts test",
